update unassign video
